--- a/example/http_c++/Makefile
+++ b/example/http_c++/Makefile
@@ -1,13 +1,14 @@
 CC=gcc
 CXX=g++
-CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -fno-omit-frame-pointer -Wno-deprecated -Wno-unused-parameter -D__const__=
+CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -fno-omit-frame-pointer -Wno-deprecated -Wno-unused-parameter -D__const__= -DBRPC_ENABLE_CPU_PROFILER -DBRPC_ENABLE_HEAP_PROFILER
 CXXFLAGS=$(CPPFLAGS)
 CFLAGS=$(CPPFLAGS)
 GFLAGS_PATH=../../../../../third-64/gflags
 LEVELDB_PATH=../../../../../third-64/leveldb
 PROTOBUF_PATH=../../../../../third-64/protobuf
+TCMALLOC_PATH=../../../../../third-64/tcmalloc
 BRPC_PATH=../../output
-INCPATH=-I$(BRPC_PATH)/include -I$(GFLAGS_PATH)/include -I$(LEVELDB_PATH)/include -I$(PROTOBUF_PATH)/include
+INCPATH=-I$(BRPC_PATH)/include -I$(GFLAGS_PATH)/include -I$(LEVELDB_PATH)/include -I$(PROTOBUF_PATH)/include -I$(TCMALLOC_PATH)/include
 PROTOC=$(PROTOBUF_PATH)/bin/protoc
 LIBS=$(BRPC_PATH)/lib/libbase.a \
   $(BRPC_PATH)/lib/libbrpc.a \
@@ -18,35 +19,37 @@ LIBS=$(BRPC_PATH)/lib/libbase.a \
   $(GFLAGS_PATH)/lib/libgflags.a \
   $(LEVELDB_PATH)/lib/libleveldb.a \
   $(PROTOBUF_PATH)/lib/libprotobuf.a \
-  -lpthread \
-  -lrt \
-  -lssl \
-  -lcrypto \
-  -ldl \
-  -lz
+  $(TCMALLOC_PATH)/lib/libtcmalloc_and_profiler.a \
+  -lpthread -lrt -lssl -lcrypto -ldl -lz
 
-CLIENT_SOURCES = client.cpp
-SERVER_SOURCES = server.cpp
-PROTOS = echo.proto
+CLIENT_SOURCES = http_client.cpp
+BENCHMARK_SOURCES = benchmark_http.cpp
+SERVER_SOURCES = http_server.cpp
+PROTOS = http.proto
 
 PROTO_OBJS = $(addsuffix .pb.o, $(basename $(PROTOS)))
 PROTO_GENS = $(addsuffix .pb.h, $(basename $(PROTOS))) $(addsuffix .pb.cc, $(basename $(PROTOS)))
 CLIENT_OBJS = $(addsuffix .o, $(basename $(CLIENT_SOURCES))) 
+BENCHMARK_OBJS = $(addsuffix .o, $(basename $(BENCHMARK_SOURCES))) 
 SERVER_OBJS = $(addsuffix .o, $(basename $(SERVER_SOURCES))) 
 
 .PHONY:all
-all: echo_client echo_server
+all: http_client benchmark_http http_server
 
 .PHONY:clean
 clean:
 	@echo "Cleaning"
-	@rm -rf echo_client echo_server $(PROTO_GENS) $(PROTO_OBJS) $(CLIENT_OBJS) $(SERVER_OBJS)
+	@rm -rf http_client benchmark_http http_server $(PROTO_GENS) $(PROTO_OBJS) $(CLIENT_OBJS) $(BENCHMARK_OBJS) $(SERVER_OBJS)
 
-echo_client:$(PROTO_OBJS) $(CLIENT_OBJS)
+http_client:$(CLIENT_OBJS)
 	@echo "Linking $@"
 	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" -o $@
 
-echo_server:$(PROTO_OBJS) $(SERVER_OBJS)
+benchmark_http:$(BENCHMARK_OBJS)
+	@echo "Linking $@"
+	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" -o $@
+
+http_server:$(PROTO_OBJS) $(SERVER_OBJS)
 	@echo "Linking $@"
 	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" -o $@
 
