--- a/example/partition_echo_c++/Makefile
+++ b/example/partition_echo_c++/Makefile
@@ -1,13 +1,14 @@
 CC=gcc
 CXX=g++
-CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -fno-omit-frame-pointer -Wno-deprecated -Wno-unused-parameter -D__const__=
+CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -fno-omit-frame-pointer -Wno-deprecated -Wno-unused-parameter -D__const__= -DBRPC_ENABLE_CPU_PROFILER -DBRPC_ENABLE_HEAP_PROFILER
 CXXFLAGS=$(CPPFLAGS)
 CFLAGS=$(CPPFLAGS)
 GFLAGS_PATH=../../../../../third-64/gflags
 LEVELDB_PATH=../../../../../third-64/leveldb
 PROTOBUF_PATH=../../../../../third-64/protobuf
+TCMALLOC_PATH=../../../../../third-64/tcmalloc
 BRPC_PATH=../../output
-INCPATH=-I$(BRPC_PATH)/include -I$(GFLAGS_PATH)/include -I$(LEVELDB_PATH)/include -I$(PROTOBUF_PATH)/include
+INCPATH=-I$(BRPC_PATH)/include -I$(GFLAGS_PATH)/include -I$(LEVELDB_PATH)/include -I$(PROTOBUF_PATH)/include -I$(TCMALLOC_PATH)/include
 PROTOC=$(PROTOBUF_PATH)/bin/protoc
 LIBS=$(BRPC_PATH)/lib/libbase.a \
   $(BRPC_PATH)/lib/libbrpc.a \
@@ -18,12 +19,8 @@ LIBS=$(BRPC_PATH)/lib/libbase.a \
   $(GFLAGS_PATH)/lib/libgflags.a \
   $(LEVELDB_PATH)/lib/libleveldb.a \
   $(PROTOBUF_PATH)/lib/libprotobuf.a \
-  -lpthread \
-  -lrt \
-  -lssl \
-  -lcrypto \
-  -ldl \
-  -lz
+  $(TCMALLOC_PATH)/lib/libtcmalloc_and_profiler.a \
+  -lpthread -lrt -lssl -lcrypto -ldl -lz
 
 CLIENT_SOURCES = client.cpp
 SERVER_SOURCES = server.cpp
