--- a/tools/rpc_view/Makefile
+++ b/tools/rpc_view/Makefile
@@ -25,28 +25,22 @@ LIBS=$(BRPC_PATH)/lib/libbase.a \
   -ldl \
   -lz
 
-CLIENT_SOURCES = client.cpp
-SERVER_SOURCES = server.cpp
-PROTOS = echo.proto
+CLIENT_SOURCES = rpc_view.cpp
+PROTOS = view.proto
 
 PROTO_OBJS = $(addsuffix .pb.o, $(basename $(PROTOS)))
 PROTO_GENS = $(addsuffix .pb.h, $(basename $(PROTOS))) $(addsuffix .pb.cc, $(basename $(PROTOS)))
 CLIENT_OBJS = $(addsuffix .o, $(basename $(CLIENT_SOURCES))) 
-SERVER_OBJS = $(addsuffix .o, $(basename $(SERVER_SOURCES))) 
 
 .PHONY:all
-all: echo_client echo_server
+all: rpc_view 
 
 .PHONY:clean
 clean:
 	@echo "Cleaning"
-	@rm -rf echo_client echo_server $(PROTO_GENS) $(PROTO_OBJS) $(CLIENT_OBJS) $(SERVER_OBJS)
+	@rm -rf rpc_view $(PROTO_GENS) $(PROTO_OBJS) $(CLIENT_OBJS)
 
-echo_client:$(PROTO_OBJS) $(CLIENT_OBJS)
-	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" -o $@
-
-echo_server:$(PROTO_OBJS) $(SERVER_OBJS)
+rpc_view:$(PROTO_OBJS) $(CLIENT_OBJS)
 	@echo "Linking $@"
 	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" -o $@
 
