--- a/example/memcache_c++/Makefile
+++ b/example/memcache_c++/Makefile
@@ -1,29 +1,17 @@
+include ../../config_with_tcmalloc.mk
+BRPC_PATH=../../output
 CC=gcc
 CXX=g++
 CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -fno-omit-frame-pointer -Wno-deprecated -Wno-unused-parameter -D__const__= -DBRPC_ENABLE_CPU_PROFILER -DBRPC_ENABLE_HEAP_PROFILER
 CXXFLAGS=$(CPPFLAGS)
 CFLAGS=$(CPPFLAGS)
-GFLAGS_PATH=../../../../../third-64/gflags
-LEVELDB_PATH=../../../../../third-64/leveldb
-PROTOBUF_PATH=../../../../../third-64/protobuf
-TCMALLOC_PATH=../../../../../third-64/tcmalloc
-BRPC_PATH=../../output
 INCPATH=-I$(BRPC_PATH)/include -I$(GFLAGS_PATH)/include -I$(LEVELDB_PATH)/include -I$(PROTOBUF_PATH)/include -I$(TCMALLOC_PATH)/include
 PROTOC=$(PROTOBUF_PATH)/bin/protoc
-LIBS=$(BRPC_PATH)/lib/libbase.a \
-  $(BRPC_PATH)/lib/libbrpc.a \
-  $(BRPC_PATH)/lib/libbthread.a \
-  $(BRPC_PATH)/lib/libbvar.a \
-  $(BRPC_PATH)/lib/libjson2pb.a \
-  $(BRPC_PATH)/lib/libmcpack2pb.a \
-  $(GFLAGS_PATH)/lib/libgflags.a \
-  $(LEVELDB_PATH)/lib/libleveldb.a \
-  $(PROTOBUF_PATH)/lib/libprotobuf.a \
-  $(TCMALLOC_PATH)/lib/libtcmalloc_and_profiler.a \
-  -lpthread -lrt -lssl -lcrypto -ldl -lz
+LIBS=$(wildcard $(BRPC_PATH)/lib/lib*.a) $(GFLAGS_PATH)/lib/libgflags.a $(LEVELDB_PATH)/lib/libleveldb.a $(PROTOBUF_PATH)/lib/libprotobuf.a $(TCMALLOC_PATH)/lib/libtcmalloc_and_profiler.a \
+	 -lpthread -lrt -lssl -lcrypto -ldl -lz
 
-CLIENT_SOURCES = client.cpp
-CLIENT_OBJS = $(addsuffix .o, $(basename $(CLIENT_SOURCES))) 
+SOURCES = $(wildcard *.cpp)
+OBJS = $(addsuffix .o, $(basename $(SOURCES))) 
 
 .PHONY:all
 all: memcache_client
@@ -31,9 +19,9 @@ all: memcache_client
 .PHONY:clean
 clean:
 	@echo "Cleaning"
-	@rm -rf memcache_client $(CLIENT_OBJS)
+	@rm -rf memcache_client $(OBJS)
 
-memcache_client:$(CLIENT_OBJS)
+memcache_client:$(OBJS)
 	@echo "Linking $@"
 	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" -o $@
 
