--- a/example/memcache_c++/Makefile
+++ b/example/memcache_c++/Makefile
@@ -1,14 +1,10 @@
-include ../../config_with_tcmalloc.mk
-BRPC_PATH=../../output
-CC=gcc
-CXX=g++
-CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -fno-omit-frame-pointer -Wno-deprecated -Wno-unused-parameter -D__const__= -DBRPC_ENABLE_CPU_PROFILER -DBRPC_ENABLE_HEAP_PROFILER
-CXXFLAGS=$(CPPFLAGS)
-CFLAGS=$(CPPFLAGS)
-INCPATH=-I$(BRPC_PATH)/include -I$(GFLAGS_PATH)/include -I$(LEVELDB_PATH)/include -I$(PROTOBUF_PATH)/include -I$(TCMALLOC_PATH)/include
-PROTOC=$(PROTOBUF_PATH)/bin/protoc
-LIBS=$(wildcard $(BRPC_PATH)/lib/lib*.a) $(GFLAGS_PATH)/lib/libgflags.a $(LEVELDB_PATH)/lib/libleveldb.a $(PROTOBUF_PATH)/lib/libprotobuf.a $(TCMALLOC_PATH)/lib/libtcmalloc_and_profiler.a \
-	 -lpthread -lrt -lssl -lcrypto -ldl -lz
+include ../../config.mk
+BRPC_PATH = ../../output
+CPPFLAGS = -std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -fno-omit-frame-pointer -Wno-deprecated -Wno-unused-parameter -D__const__=
+CXXFLAGS = $(CPPFLAGS)
+INCPATH = -I$(BRPC_PATH)/include $(addprefix -I, $(INCS))
+LIBS += $(wildcard $(BRPC_PATH)/lib/lib*.a)
+LDFLAGS = -lpthread -lrt -lssl -lcrypto -ldl -lz
 
 SOURCES = $(wildcard *.cpp)
 OBJS = $(addsuffix .o, $(basename $(SOURCES))) 
@@ -23,7 +19,7 @@ clean:
 
 memcache_client:$(OBJS)
 	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" -o $@
+	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
 
 %.o:%.cpp
 	@echo "Compiling $@"
