--- a/example/memcache_c++/Makefile
+++ b/example/memcache_c++/Makefile
@@ -3,11 +3,12 @@ BRPC_PATH = ../../output
 CPPFLAGS = -std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -Wno-deprecated -Wno-unused-parameter -D__const__=
 CXXFLAGS = $(CPPFLAGS)
 INCPATH = -I$(BRPC_PATH)/include $(addprefix -I, $(INCS))
-LIBS += $(wildcard $(BRPC_PATH)/lib/lib*.a)
-LDFLAGS = -lpthread -lrt -lssl -lcrypto -ldl -lz
+LIBPATH = $(addprefix -L, $(LIBS))
+BRPC_LIBS += $(wildcard $(BRPC_PATH)/lib/lib*.a)
 
 SOURCES = $(wildcard *.cpp)
 OBJS = $(addsuffix .o, $(basename $(SOURCES))) 
+LDFLAGS = -Wl,-Bstatic $(STATIC_LINKING) -Wl,-Bdynamic $(DYNAMIC_LINKING)
 
 .PHONY:all
 all: memcache_client
@@ -19,7 +20,7 @@ clean:
 
 memcache_client:$(OBJS)
 	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
 
 %.o:%.cpp
 	@echo "Compiling $@"
