--- a/example/http_c++/Makefile
+++ b/example/http_c++/Makefile
@@ -4,12 +4,11 @@ BRPC_PATH=../../output
 CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -Wno-deprecated -Wno-unused-parameter -D__const__= 
 CXXFLAGS=$(CPPFLAGS)
 CFLAGS=$(CPPFLAGS)
-INCPATH=-I$(BRPC_PATH)/include -I$(GFLAGS_PATH)/include -I$(LEVELDB_PATH)/include -I$(PROTOBUF_PATH)/include -I$(TCMALLOC_PATH)/include
-LIBS+=$(wildcard $(BRPC_PATH)/lib/lib*.a)
-LDFLAGS=-lpthread -lrt -lssl -lcrypto -ldl -lz
+INCPATH = -I$(BRPC_PATH)/include $(addprefix -I, $(INCS))
+LIBPATH = $(addprefix -L, $(LIBS))
+BRPC_LIBS=$(wildcard $(BRPC_PATH)/lib/lib*.a)
 ifeq ($(LINK_PERFTOOLS), 1)
-	LIBS+=-DBRPC_ENABLE_CPU_PROFILER -DBRPC_ENABLE_HEAP_PROFILER
-	LDFLAGS+=-llzma
+	CPPFLAGS+=-DBRPC_ENABLE_CPU_PROFILER -DBRPC_ENABLE_HEAP_PROFILER
 endif
 
 CLIENT_SOURCES = http_client.cpp
@@ -22,6 +21,7 @@ PROTO_GENS = $(addsuffix .pb.h, $(basename $(PROTOS))) $(addsuffix .pb.cc, $(bas
 CLIENT_OBJS = $(addsuffix .o, $(basename $(CLIENT_SOURCES))) 
 BENCHMARK_OBJS = $(addsuffix .o, $(basename $(BENCHMARK_SOURCES))) 
 SERVER_OBJS = $(addsuffix .o, $(basename $(SERVER_SOURCES))) 
+LDFLAGS = -Wl,-Bstatic $(STATIC_LINKING) -Wl,-Bdynamic $(DYNAMIC_LINKING)
 
 .PHONY:all
 all: http_client benchmark_http http_server
@@ -33,15 +33,15 @@ clean:
 
 http_client:$(CLIENT_OBJS)
 	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
 
 benchmark_http:$(BENCHMARK_OBJS)
 	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
 
 http_server:$(PROTO_OBJS) $(SERVER_OBJS)
 	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
 
 %.pb.cc:%.proto
 	@echo "Generating $@"
