--- a/example/nshead_extension_c++/Makefile
+++ b/example/nshead_extension_c++/Makefile
@@ -3,8 +3,8 @@ BRPC_PATH = ../../output
 CPPFLAGS = -std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -Wno-deprecated -Wno-unused-parameter -D__const__=
 CXXFLAGS = $(CPPFLAGS)
 INCPATH = -I$(BRPC_PATH)/include $(addprefix -I, $(INCS))
-LIBS += $(wildcard $(BRPC_PATH)/lib/lib*.a)
-LDFLAGS = -lpthread -lrt -lssl -lcrypto -ldl -lz
+LIBPATH = $(addprefix -L, $(LIBS))
+BRPC_LIBS = $(wildcard $(BRPC_PATH)/lib/lib*.a)
 
 CLIENT_SOURCES = client.cpp
 SERVER_SOURCES = server.cpp
@@ -14,6 +14,7 @@ PROTO_OBJS = $(addsuffix .pb.o, $(basename $(PROTOS)))
 PROTO_GENS = $(addsuffix .pb.h, $(basename $(PROTOS))) $(addsuffix .pb.cc, $(basename $(PROTOS)))
 CLIENT_OBJS = $(addsuffix .o, $(basename $(CLIENT_SOURCES))) 
 SERVER_OBJS = $(addsuffix .o, $(basename $(SERVER_SOURCES))) 
+LDFLAGS = -Wl,-Bstatic $(STATIC_LINKING) -Wl,-Bdynamic $(DYNAMIC_LINKING)
 
 .PHONY:all
 all: echo_client echo_server
@@ -25,11 +26,11 @@ clean:
 
 echo_client:$(PROTO_OBJS) $(CLIENT_OBJS)
 	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
 
 echo_server:$(PROTO_OBJS) $(SERVER_OBJS)
 	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
 
 %.pb.cc:%.proto
 	@echo "Generating $@"
