--- a/example/redis_c++/Makefile
+++ b/example/redis_c++/Makefile
@@ -3,14 +3,16 @@ BRPC_PATH = ../../output
 CPPFLAGS = -std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -Wno-deprecated -Wno-unused-parameter -D__const__=
 CXXFLAGS = $(CPPFLAGS)
 INCPATH = -I$(BRPC_PATH)/include $(addprefix -I, $(INCS))
-LIBS += $(wildcard $(BRPC_PATH)/lib/lib*.a)
-LDFLAGS = -lpthread -lrt -lssl -lcrypto -ldl -lz -lreadline -lncurses
+LIBPATH = $(addprefix -L, $(LIBS))
+BRPC_LIBS = $(wildcard $(BRPC_PATH)/lib/lib*.a)
+DYNAMIC_LINKING += -lreadline -lncurses
 
 PRESS_SOURCES = redis_press.cpp
 CLI_SOURCES = redis_cli.cpp
 
 PRESS_OBJS = $(addsuffix .o, $(basename $(PRESS_SOURCES))) 
 CLI_OBJS = $(addsuffix .o, $(basename $(CLI_SOURCES))) 
+LDFLAGS = -Wl,-Bstatic $(STATIC_LINKING) -Wl,-Bdynamic $(DYNAMIC_LINKING)
 
 .PHONY:all
 all: redis_press redis_cli
@@ -22,11 +24,11 @@ clean:
 
 redis_press:$(PRESS_OBJS)
 	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
 
 redis_cli:$(CLI_OBJS)
 	@echo "Linking $@"
-	@$(CXX) -Xlinker "-(" $^ $(LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
 
 %.o:%.cpp
 	@echo "Compiling $@"
