Add bthread/parking_lot.h bthread/remote_task_queue.h, fix .gitignore
Change-Id: I6e3172633ed8230a522241b67764c4278f805c7a

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+#ignore all files without extension
 *
 !*.*
+!*/
+
 *.o
 *.a
+*.log
 *.pb.cc
 *.pb.h
 *.prof
 /output
 /test/output
+#ignore hidden files
+.*
