Patch svn r35075 & Add back -fno-omit-frame-pointer in all Makefiles to support perf
Change-Id: I029ad0029c4e08649da381a87d0bc40a59ffa039

--- a/example/cascade_echo_c++/Makefile
+++ b/example/cascade_echo_c++/Makefile
@@ -1,7 +1,7 @@
 LINK_PERFTOOLS=1
 include ../../config.mk
 BRPC_PATH=../../output
-CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -Wno-deprecated -Wno-unused-parameter -D__const__=
+CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -Wno-deprecated -Wno-unused-parameter -fno-omit-frame-pointer -D__const__=
 CXXFLAGS=$(CPPFLAGS)
 CFLAGS=$(CPPFLAGS)
 INCPATH=-I$(BRPC_PATH)/include $(addprefix -I, $(INCS))
