Remove build_time related code; Replace test/COMAKE with test/Makefile; Unify most Makefile in examples

--- a/example/http_c++/Makefile
+++ b/example/http_c++/Makefile
@@ -1,27 +1,26 @@
-LINK_PERFTOOLS=1
-include ../../config.mk
-BRPC_PATH=../../output
+NEED_GPERFTOOLS=1
+BRPC_PATH=../../
+include $(BRPC_PATH)/config.mk
 CPPFLAGS=-std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -Wno-deprecated -Wno-unused-parameter -fno-omit-frame-pointer -D__const__= 
-CXXFLAGS=$(CPPFLAGS)
-CFLAGS=$(CPPFLAGS)
-INCPATH = -I$(BRPC_PATH)/include $(addprefix -I, $(INCS))
-LIBPATH = $(addprefix -L, $(LIBS))
-BRPC_LIBS=$(wildcard $(BRPC_PATH)/lib/lib*.a)
-ifeq ($(LINK_PERFTOOLS), 1)
+ifeq ($(NEED_GPERFTOOLS), 1)
 	CPPFLAGS+=-DBRPC_ENABLE_CPU_PROFILER -DBRPC_ENABLE_HEAP_PROFILER
 endif
+CXXFLAGS=$(CPPFLAGS)
+CFLAGS=$(CPPFLAGS)
+HDRPATHS = -I$(BRPC_PATH)/output/include $(addprefix -I, $(HDRS))
+LIBPATHS = -L$(BRPC_PATH)/output/lib $(addprefix -L, $(LIBS))
+STATIC_LINKINGS += -lbase -lbvar -lbthread -lbrpc -ljson2pb -lmcpack2pb
 
 CLIENT_SOURCES = http_client.cpp
 BENCHMARK_SOURCES = benchmark_http.cpp
 SERVER_SOURCES = http_server.cpp
 PROTOS = http.proto
 
-PROTO_OBJS = $(addsuffix .pb.o, $(basename $(PROTOS)))
-PROTO_GENS = $(addsuffix .pb.h, $(basename $(PROTOS))) $(addsuffix .pb.cc, $(basename $(PROTOS)))
+PROTO_OBJS = $(PROTOS:.proto=.pb.o)
+PROTO_GENS = $(PROTOS:.proto=.pb.h) $(PROTOS:.proto=.pb.cc)
 CLIENT_OBJS = $(addsuffix .o, $(basename $(CLIENT_SOURCES))) 
 BENCHMARK_OBJS = $(addsuffix .o, $(basename $(BENCHMARK_SOURCES))) 
 SERVER_OBJS = $(addsuffix .o, $(basename $(SERVER_SOURCES))) 
-LDFLAGS = -Wl,-Bstatic $(STATIC_LINKING) -Wl,-Bdynamic $(DYNAMIC_LINKING)
 
 .PHONY:all
 all: http_client benchmark_http http_server
@@ -33,15 +32,15 @@ clean:
 
 http_client:$(CLIENT_OBJS)
 	@echo "Linking $@"
-	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATHS) -Xlinker "-(" $^ -Wl,-Bstatic $(STATIC_LINKINGS) -Wl,-Bdynamic $(DYNAMIC_LINKINGS) -Xlinker "-)" -o $@
 
 benchmark_http:$(BENCHMARK_OBJS)
 	@echo "Linking $@"
-	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATHS) -Xlinker "-(" $^ -Wl,-Bstatic $(STATIC_LINKINGS) -Wl,-Bdynamic $(DYNAMIC_LINKINGS) -Xlinker "-)" -o $@
 
 http_server:$(PROTO_OBJS) $(SERVER_OBJS)
 	@echo "Linking $@"
-	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATHS) -Xlinker "-(" $^ -Wl,-Bstatic $(STATIC_LINKINGS) -Wl,-Bdynamic $(DYNAMIC_LINKINGS) -Xlinker "-)" -o $@
 
 %.pb.cc:%.proto
 	@echo "Generating $@"
@@ -49,8 +48,8 @@ http_server:$(PROTO_OBJS) $(SERVER_OBJS)
 
 %.o:%.cpp
 	@echo "Compiling $@"
-	@$(CXX) -c $(INCPATH) $(CXXFLAGS) $< -o $@
+	@$(CXX) -c $(HDRPATHS) $(CXXFLAGS) $< -o $@
 
 %.o:%.cc
 	@echo "Compiling $@"
-	@$(CXX) -c $(INCPATH) $(CXXFLAGS) $< -o $@
+	@$(CXX) -c $(HDRPATHS) $(CXXFLAGS) $< -o $@
