--- a/example/redis_c++/Makefile
+++ b/example/redis_c++/Makefile
@@ -1,18 +1,17 @@
-include ../../config.mk
-BRPC_PATH = ../../output
+BRPC_PATH = ../../
+include $(BRPC_PATH)/config.mk
 CPPFLAGS = -std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -Wno-deprecated -Wno-unused-parameter -fno-omit-frame-pointer -D__const__=
 CXXFLAGS = $(CPPFLAGS)
-INCPATH = -I$(BRPC_PATH)/include $(addprefix -I, $(INCS))
-LIBPATH = $(addprefix -L, $(LIBS))
-BRPC_LIBS = $(wildcard $(BRPC_PATH)/lib/lib*.a)
-DYNAMIC_LINKING += -lreadline -lncurses
+HDRPATHS = -I$(BRPC_PATH)/output/include $(addprefix -I, $(HDRS))
+LIBPATHS = -L$(BRPC_PATH)/output/lib $(addprefix -L, $(LIBS))
+DYNAMIC_LINKINGS += -lreadline -lncurses
+STATIC_LINKINGS += -lbase -lbvar -lbthread -lbrpc -ljson2pb -lmcpack2pb
 
 PRESS_SOURCES = redis_press.cpp
 CLI_SOURCES = redis_cli.cpp
 
 PRESS_OBJS = $(addsuffix .o, $(basename $(PRESS_SOURCES))) 
 CLI_OBJS = $(addsuffix .o, $(basename $(CLI_SOURCES))) 
-LDFLAGS = -Wl,-Bstatic $(STATIC_LINKING) -Wl,-Bdynamic $(DYNAMIC_LINKING)
 
 .PHONY:all
 all: redis_press redis_cli
@@ -24,16 +23,16 @@ clean:
 
 redis_press:$(PRESS_OBJS)
 	@echo "Linking $@"
-	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATHS) -Xlinker "-(" $^ -Wl,-Bstatic $(STATIC_LINKINGS) -Wl,-Bdynamic $(DYNAMIC_LINKINGS) -Xlinker "-)" -o $@
 
 redis_cli:$(CLI_OBJS)
 	@echo "Linking $@"
-	@$(CXX) $(LIBPATH) -Xlinker "-(" $^ $(BRPC_LIBS) -Xlinker "-)" $(LDFLAGS) -o $@
+	@$(CXX) $(LIBPATHS) -Xlinker "-(" $^ -Wl,-Bstatic $(STATIC_LINKINGS) -Wl,-Bdynamic $(DYNAMIC_LINKINGS) -Xlinker "-)" -o $@
 
 %.o:%.cpp
 	@echo "Compiling $@"
-	@$(CXX) -c $(INCPATH) $(CXXFLAGS) $< -o $@
+	@$(CXX) -c $(HDRPATHS) $(CXXFLAGS) $< -o $@
 
 %.o:%.cc
 	@echo "Compiling $@"
-	@$(CXX) -c $(INCPATH) $(CXXFLAGS) $< -o $@
+	@$(CXX) -c $(HDRPATHS) $(CXXFLAGS) $< -o $@
