--- a/example/memcache_c++/Makefile
+++ b/example/memcache_c++/Makefile
@@ -19,7 +19,7 @@ clean:
 
 memcache_client:$(OBJS)
 	@echo "Linking $@"
-	@$(CXX) $(LIBPATHS) -Xlinker "-(" $^ -Wl,-Bstatic $(STATIC_LINKINGS) -Wl,-Bdynamic $(DYNAMIC_LINKINGS) -Xlinker "-)" -o $@
+	@$(CXX) $(LIBPATHS) -Xlinker "-(" $^ -Wl,-Bstatic $(STATIC_LINKINGS) -Wl,-Bdynamic -Xlinker "-)" $(DYNAMIC_LINKINGS) -o $@
 
 %.o:%.cpp
 	@echo "Compiling $@"
