--- a/example/redis_c++/Makefile
+++ b/example/redis_c++/Makefile
@@ -1,7 +1,6 @@
 BRPC_PATH = ../../
 include $(BRPC_PATH)/config.mk
-CPPFLAGS = -std=c++0x -g -DNDEBUG -O2 -pipe -W -Wall -Werror -fPIC -Wno-deprecated -Wno-unused-parameter -fno-omit-frame-pointer -D__const__=
-CXXFLAGS = $(CPPFLAGS)
+CXXFLAGS = -std=c++0x -g -DNDEBUG -O2 -D__const__= -pipe -W -Wall -Werror -fPIC -fno-omit-frame-pointer
 HDRPATHS = -I$(BRPC_PATH)/output/include $(addprefix -I, $(HDRS))
 LIBPATHS = -L$(BRPC_PATH)/output/lib $(addprefix -L, $(LIBS))
 DYNAMIC_LINKINGS += -lreadline -lncurses
