--- a/example/redis_c++/Makefile
+++ b/example/redis_c++/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS = -std=c++0x -g -DNDEBUG -O2 -D__const__= -pipe -W -Wall -Werror -fPIC 
 HDRPATHS = -I$(BRPC_PATH)/output/include $(addprefix -I, $(HDRS))
 LIBPATHS = -L$(BRPC_PATH)/output/lib $(addprefix -L, $(LIBS))
 DYNAMIC_LINKINGS += -lreadline -lncurses
-STATIC_LINKINGS += -lbase -lbvar -lbthread -lbrpc -ljson2pb -lmcpack2pb
+STATIC_LINKINGS += -lbrpc
 
 PRESS_SOURCES = redis_press.cpp
 CLI_SOURCES = redis_cli.cpp
